--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
     "bignumber.js": "^9.0.1",
     "flux": "^4.0.1",
     "moment": "^2.29.1",
-    "next": "^10.2.3",
-    "node-fetch": "^2.6.2",
-    "query-string": "^7.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^13.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.1.2",
     "web3": "^1.5.2"
   },
